# ocean-nutrition

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: .env.example
docs/: mkdocs.yml
docs/src/: index.md
notebooks/data/: barcode.ipynb  get-aisle.ipynb  get-products-from-aisle.ipynb  myfitnesspal.ipynb  reduction-parser.ipynb
notebooks/data/parser/: myfitnesspal.ipynb
scripts/: clear-outputs.sh  lock.sh  release.sh  run-dev.sh
src/: requirements-dev.txt  requirements.txt  setup.py
src/ocean_nutrition/: config.py  main.py
src/ocean_nutrition/data/: __init__.py  data.py
src/ocean_nutrition/utils/: __init__.py  logger.py  status.py
src/ocean_nutrition/visualisations/: __init__.py  views.py
src/ocean_nutrition/visualisations/static/web-components/barcode-scanner/: barcode-scanner.html
src/ocean_nutrition/visualisations/templates/: _layout.html  diary.html  index.html  profile.html  search.html
tests/: test_ocean_nutrition.py
