[tool.poetry]
name = "ocean-nutrition"
version = "0.1.0"
description = "Testing"
authors = ["Vikash Kothary <kothary.vikash@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
beautifulsoup4 = "^4.9.1"
pandas = "^1.0.5"
myfitnesspal = "^1.16.1"
openfoodfacts = {git = "https://github.com/vikash-kothary/openfoodfacts-python"}

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"
jupyter = "^1.0.0"
jupyterlab = "^2.1.5"
nbstripout = "^0.3.8"
toml = "^0.10.1"
requests = "^2.24.0"
selenium = "^3.141.0"
helium = "^3.0.4"
flask-ngrok = "^0.0.25"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
